--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', path='/semantic/semantic.min.css')}}">
+    <script src="{{ url_for('static', path="/jquery-3.7.1.min.js")}}"></script>
+    <script src="{{ url_for('static', path="/semantic/semantic.min.js")}}"></script>
 </head>
 <body>
-    
+    Test
 </body>
 </html>
