--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,63 @@
     <script src="{{ url_for('static', path="/semantic/semantic.min.js")}}"></script>
 </head>
 <body>
-    Test
+    <div class="ui container">
+        <div class="ui link cards">
+            <div class="card">
+              <div class="image">
+                <img src="/images/avatar2/large/matthew.png">
+              </div>
+              <div class="content">
+                <div class="header">Matt Giampietro</div>
+                <div class="meta">
+                  <a>好友</a>
+                </div>
+                <div class="description">
+                  Matthew is an interior designer living in New York.
+                </div>
+              </div>
+              <div class="extra content">
+                <span class="right floated">2013年加入 </span>
+                <span><i class="user icon"></i> 75 个好友 </span>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="/images/avatar2/large/molly.png">
+              </div>
+              <div class="content">
+                <div class="header">Molly</div>
+                <div class="meta">
+                  <span class="date">Coworker</span>
+                </div>
+                <div class="description">
+                  Molly is a personal assistant living in Paris.
+                </div>
+              </div>
+              <div class="extra content">
+                <span class="right floated">2011年加入 </span>
+                <span><i class="user icon"></i> 35 个好友 </span>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="/images/avatar2/large/elyse.png">
+              </div>
+              <div class="content">
+                <div class="header">Elyse</div>
+                <div class="meta">
+                  <a>Coworker</a>
+                </div>
+                <div class="description">
+                  Elyse is a copywriter working in New York.
+                </div>
+              </div>
+              <div class="extra content">
+                <span class="right floated">2014年加入 </span>
+                <span><i class="user icon"></i> 151 个好友 </span>
+              </div>
+            </div>
+          </div>
+    </div>
 </body>
 </html>
